# aml-group-project

./: .gitignore  DETR1STMAY.ipynb  DETR_Pretrained.ipynb  Modify_yaml_no_github.ipynb  README.md  RT-DETR_baseline.ipynb  Untitled1.ipynb  args.py  augment_aml.py  baseline_training.ipynb  changebackboneAndHead.ipynb  colab_workflow.ipynb  config_dataset_albumation.ipynb  config_dataset_albumation.py  custom_detection_loss.py  dataset_processing.ipynb  detr_baseline.py  how_to_implement_varifocal_loss_on_ultralytics_yo_.py  hyp.aml.baseline.yaml  hyp.default.yaml  hyp.my_experiment.yaml  hyp.no-augmentation.yaml  hyp.scratch-high.yaml  loss.py  main.py  predict.sh  requirements.txt  test.py  test.sh  train.sh  utils.py  v8_baseline (7).py  val.py  val.sh  valid.sh  yolorealfinal.ipynb  yolov5_train_job.ipynb  yolov8_freezing_layers.ipynb
Surrey_CSEE_Thesis_Template/: SurreyTitle.sty  abbreviations.tex  abstract.tex  acknowledgement.tex  appendix.tex  bibliography.bib  declaration.tex  main.ist  main.tex
archived_scripts/: v5_baseline (2).py
code/: pyproject.toml
datasets/: data.yaml  test  train
notebooks/: RT-DETR_baseline.ipynb  changebackboneAndHead.ipynb  colab_train_test_workflow.ipynb  colab_workflow.ipynb  colab_workflow_yolov5_train_job.ipynb  colab_workflow_yolov8_aml-group-project.ipynb  colab_workflow_yolov8_ultralytics.ipynb  config_dataset_albumation.ipynb  dataset_processing.ipynb  dataset_processing_aml.ipynb  experiment_1_yolo_train.ipynb  modify_yolo_using_github_yaml.ipynb  yolov5_train_job.ipynb
notebooks/experimental_notebooks/: Pipeline.ipynb  (+2 more)
(+8 files in other folders)
